tests/files/flow_controller_tests/should_run/069.cmdr
x = 3;
print cos(x);