tests/files/flow_controller_tests/should_fail/046.cmdr
x = true;
print cos(x);